Update o metodo criar

--- a/BibliotecaVirtual/Views/Livro/Criar.cshtml
+++ b/BibliotecaVirtual/Views/Livro/Criar.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     @*Usando 1/3 da tela, por que bootstrap divide a tela em 12 partes e 4 é 1/3 da tela*@
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Criar">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 @*Aqui mesmo já esta preenchendo o atributo do tipo Seller do SellerFormViewModel*@
