--- a/BibliotecaVirtual/Views/Shared/_Layout.cshtml
+++ b/BibliotecaVirtual/Views/Shared/_Layout.cshtml
@@ -23,11 +23,11 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Livro" asp-action="Criar">Cadastrar Livro</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Livro" asp-action="Listar">Listar Livros</a>
-                        </li>
+                        </li
                     </ul>
                 </div>
             </div>
