--- a/BibliotecaVirtual/Views/Livro/Criar.cshtml
+++ b/BibliotecaVirtual/Views/Livro/Criar.cshtml
@@ -6,8 +6,19 @@
     ViewData["Title"] = "Criar";
 }
 <h2> @ViewData["Title"] </h2>
-<h4> Seller </h4>
 <hr />
+<style>
+    .btn-default {
+        background-color: black;
+        color: white;
+        margin-top: 15px;
+    }
+
+        .btn-default:hover {
+            color: white;
+        }
+</style>
+
 @*Row garante que a div vai ocupar a largura da tela*@
 <div class="row">
     @*Usando 1/3 da tela, por que bootstrap divide a tela em 12 partes e 4 é 1/3 da tela*@
@@ -28,7 +39,7 @@
             <div class="form-group">
                 @**@
                 <label asp-for="Livro.AnoPublicacao" class="control-label"></label>
-                <input asp-for="Livro.AnoPublicacao" class="form-control" />
+                <input type="date" asp-for="Livro.AnoPublicacao" class="form-control" />
 
             </div>
             <div class="form-group">
