--- a/BibliotecaVirtual/Views/Livro/Criar.cshtml
+++ b/BibliotecaVirtual/Views/Livro/Criar.cshtml
@@ -53,7 +53,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Livro.Disponibilidade" class="control-label"></label>
-                <input asp-for="Livro.Disponibilidade" class="form-control" />
+                <select asp-for="Livro.Disponibilidade" asp-items="@(new SelectList(Enum.GetValues(typeof(BibliotecaVirtual.Enums.DisponibilidadeLivro))))" class="form-control"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-default" />
