--- a/BibliotecaVirtual/Views/Livro/Filtro.cshtml
+++ b/BibliotecaVirtual/Views/Livro/Filtro.cshtml
@@ -1,40 +1,19 @@
-﻿@*
+﻿@model IEnumerable<BibliotecaVirtual.Models.Livro>
 
-*@
-@model IEnumerable<BibliotecaVirtual.Models.Livro>
-@{
-    ViewData["Title"] = "Livros";
 
-}
 <style>
-    .btn-default {
-        background-color: black; 
-        color: white;
-        margin-top: 15px;
-    }
-
-    .btn-default:hover {
-        color: white;
-    }
-</style>
-
-
-
-<h2> @ViewData["Title"] </h2>
-
-<h2>Filtro de livros</h2>
-
-@using (Html.BeginForm("Filtro", "Livro", FormMethod.Post))
-{
-    <label for="dataInicio">Data de Início:</label>
-    <input type="date" name="dataInicio" required>
-
-    <label for="dataFim">Data de Fim:</label>
-    <input type="date" name="dataFim" required>
-
-    <input type="submit" value="Filtrar">
+.btn-default {
+    background-color: black;
+    color: white;
+    margin-top: 15px;
 }
 
+.btn-default:hover {
+   color: white;
+}
+
+</style>
+<h1> Livros Filtrados </h1>
 <p> <a asp-action="Criar" class="btn btn-default"> Criar novo </a></p>
 <table class="table table-dark table-striped-columns">
     <thead>
